--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @plugin "@iconify/tailwind4" {
-  prefix: iconify, tabler;
+  prefix: iconify, tabler, lucide;
   scale: 1.2;
 }
 
